fix z-index

--- a/app/components/Footer/Footer.module.css
+++ b/app/components/Footer/Footer.module.css
@@ -17,7 +17,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    z-index: -1;
   }
 
   
