--- a/app/components/SharedButton/SharedButton.module.css
+++ b/app/components/SharedButton/SharedButton.module.css
@@ -52,7 +52,6 @@
     cursor: pointer;
     height: 32px;
     width: 32px;
-    z-index: -1;
 }
 
 .none {
